add balance
