# src/main/kotlin/com/wutsi/platform/payment/dto/GetBalanceResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.platform.payment.dto
+
+public data class GetBalanceResponse(
+    public val balance: Balance = Balance()
+)
